gitops/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: foo
spec:
 replicas: 1
 selector:
   matchLabels:
     app: foo
 template:
   metadata:
    labels:
      app: foo
   spec:
     containers:
     - name: c1
       image: vvang/dummy:0.3
       livenessProbe:
         initialDelaySeconds: 10
         periodSeconds: 3
         httpGet:
           path: /
           port: 8080
       readinessProbe:
         initialDelaySeconds: 10
         periodSeconds: 3
         httpGet:
           path: /
           port: 8080
